<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/binaa_logo" />
            </FrameLayout>

            <EditText
                android:id="@+id/editTextEMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rect_gray_stroke"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="@dimen/textSizeSmall" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grayHint" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_gray_stroke"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="@dimen/textSizeSmall" />

            <com.binaa.binaaadmin.views.ButtonRobotoRegular
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/viewLoading"
        layout="@layout/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
